Check for account validity in ChildAccountService::GetGoogleAuthState().

If the credentials are invalid, the account is still listed as signed
in, but invalid.

Bug: 803038,b/35726215
Change-Id: I2613a1478b53cb3d6d08af065d584b958c0048c5
Reviewed-on: https://chromium-review.googlesource.com/870314
Commit-Queue: Bernhard Bauer <bauerb@chromium.org>
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530517}
Former-commit-id: bfdba30c319eff9a655c71051b3ebb1750609c1e